--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.c linguist-detectable=false
+*.c++ linguist-detectable=true
+*.py linguist-detectable=false
